fix responsiveness on smaller devices

--- a/src/styles/ContactUs.css
+++ b/src/styles/ContactUs.css
@@ -128,6 +128,10 @@
         margin: 1rem;
     }
 
+    .email{
+        font-size: 1rem !important;
+    }
+
     .contact-us {
         grid-template-rows: 3rem auto;
     }
