--- a/src/styles/Games.css
+++ b/src/styles/Games.css
@@ -28,7 +28,9 @@
 
 @media screen and (max-width: 860px) {
     .games-showcase {
-        grid-template-columns: repeat(1, 1fr);
+        display: flex;
+        flex-direction: column;
+        align-items: center !important;
     }
 
     .games {
