--- a/src/styles/NavLink.css
+++ b/src/styles/NavLink.css
@@ -6,6 +6,12 @@
 .nav-link {
     border-radius: 50px;
     text-align: center;
-    padding-left:  0 !important;
-    padding-right:  0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+
+@media screen and (max-width: 991px) {
+    .nav-link{
+        padding-left: 1rem !important;
+    }
 }
