--- a/src/styles/Profiles.css
+++ b/src/styles/Profiles.css
@@ -39,6 +39,7 @@
 
 .team-showcase .panel {
     max-width: 225px !important;
+    min-width: 225px !important;
     justify-content: center;
 
     white-space: pre-wrap;
